--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
 	color: rgb(255, 255, 255);
 }
 
-main .deactiv {
-text-align: center;
-	padding: 20px;
+.deactiv {
+	text-align: center;
+	padding: 200px 0;
 }
 
 	.container-fluid {
