--- a/style.css
+++ b/style.css
@@ -2,24 +2,25 @@
 
 * {
 	margin: 0;
-	padding: 0;
+	padding: 0 8px;
 	box-sizing: border-box;
 	font-family: 'poppins', sans-serif;
+	line-height: 1.5rem;
 }
 
 body {
 	background-color: rgb(20, 20, 20);
 	color: rgb(255, 255, 255);
+	padding-bottom: 80px;
 }
 
 .deactiv {
-	text-align: center;
-	padding: 200px 0;
+	text-align: left;
+	padding: 10px 0;
 }
-
 	.container-fluid {
-		padding: 40px;
-		text-align: justify;
+		padding: 400px;
+		text-align: center;
 	}
 
 	.multiText1{
